# astro_pypelines

./: .gitmodules  MANIFEST.in  README.rst  setup.cfg  setup.py
astro_pypelines/: __init__.py  settings.py
astro_pypelines/fitsviewer/: fitsviewer.py
astro_pypelines/fitsviewer/static/: catalog_controls.js  control_panel.js  controls.css  fitsviewer.css  fitsviewer.js  fitsviewer_demo.js
astro_pypelines/fitsviewer/templates/: fitsviewer.html
astro_pypelines/photometry/: __init__.py  catalog.py  detect_sources.py  photometry.py
astro_pypelines/pypelines/: __init__.py
astro_pypelines/pypelines/fitsviewer/: __init__.py  fits_core.py  fitsviewer.py  setup_package.py
astro_pypelines/pypelines/fitsviewer/src/: _fitsviewer.cpp  fitsviewer.cpp  fitsviewer.h  setup_package.py
astro_pypelines/pypelines/fitsviewer/static/: analysis_tools.js  catalog_controls.js  colorpad.js  controls.js  controls_demo.js  fitsviewer.js
astro_pypelines/pypelines/fitsviewer/templates/: old_fitsviewer.html
astro_pypelines/pypelines/interactive_plots/: __init__.py  plots.py
astro_pypelines/pypelines/interactive_plots/static/: plots.css  plots.js
astro_pypelines/pypelines/interactive_plots/templates/: plots.html  scatter.html
astro_pypelines/pypelines/photometry/: __init__.py  catalog.py  detect_sources.py  match.py  photometry.py
astro_pypelines/pypelines/photometry/static/: catalog.js
astro_pypelines/utils/: setup_package.py  tools.py
astro_pypelines/utils/src/: _fitting_tools .copy_c  _fitting_tools.c  fitting_tools.c  fitting_tools.h
(+6 files in other folders)
