[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build

[ah_bootstrap]
auto_use = True

[metadata]
package_name = astro_pypelines
description = Pypelines for astropyp
long_description = This package contains a set of individual modules that can be used with the Astronomy Pypeline Framework
author = Fred Moolekamp
author_email = fred3public@gmail.com
license = BSD
url = http://astropy.org/
edit_on_github = False
github_project = astropy/astropy
